templates/sickchill_template.yaml
---
# Source: sickchill/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-sickchill
  labels:
    helm.sh/chart: sickchill-0.1.0
    app.kubernetes.io/name: sickchill
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2021.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sickchill
    app.kubernetes.io/instance: release-name
---
# Source: sickchill/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-sickchill
  labels:
    helm.sh/chart: sickchill-0.1.0
    app.kubernetes.io/name: sickchill
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2021.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: sickchill
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sickchill
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-sickchill
        image: "ghcr.io/linuxserver/sickchill:2021.5.10-1-ls63"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8081
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: sickchill/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-sickchill
  labels:
    helm.sh/chart: sickchill-0.1.0
    app.kubernetes.io/name: sickchill
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2021.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "sickchill.192.168.1.203.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-sickchill
                port:
                  number: 8081
